[gd_scene load_steps=4 format=3 uid="uid://cj0ohwh0bvugc"]

[ext_resource type="FontFile" uid="uid://c4vkhox6clp7l" path="res://Assets/Fonts/FiveFontsatFreddy's-Regular.ttf" id="1_bros3"]
[ext_resource type="Script" uid="uid://braypr24mc755" path="res://PopupLabel.gd" id="1_rwm5f"]

[sub_resource type="LabelSettings" id="LabelSettings_0eoht"]
font = ExtResource("1_bros3")
font_size = 32

[node name="Popup_Label" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwm5f")

[node name="Top_Right" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 0.1
text = "Saved..."
label_settings = SubResource("LabelSettings_0eoht")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Interval" type="Timer" parent="."]
wait_time = 0.2

[node name="End_Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="Interval" to="." method="_on_interval_timeout"]
[connection signal="timeout" from="End_Timer" to="." method="_on_end_timer_timeout"]
